# Stockiva

./: LICENSE  README.md
server/: main.py  pyproject.toml
