[tool.poetry]
name = "server"
version = "0.1.0"
description = "REST API for STPMS - final year project for silicon instiute of technology, bbsr"
authors = ["Sagar mohanty"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.72.0"
uvicorn = "^0.17.0"
SQLAlchemy = "^1.4.31"
databases = "^0.5.5"
alembic = "^1.7.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
